# end-to-end-rag-assistants

./: .gitignore  OLLAMA_SETUP.md  OPEN_SOURCE_LLM_OPTIONS.md  RAGHelper.py  RAGHelperOllama.py  README.md  app.py  chatpdf_base.py  main.py  pyproject.toml  requirements-full.txt  requirements.txt
