[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.0",
    "nltk>=3.9.2",
    "numpy<2.0.0",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch<2.3.0",
]
